syntax = "proto2";

package example;

message Person{
	required string name = 1;
	required int32 id = 2;
	optional string email = 3;

	enum PhoneType{
		MOBILE = 0;
		HOME = 1;
		WORK = 2;	
	}

	enum MessageType{
		JOIN_ROOM = 0;
		SEND_MESSAGE = 1;
		LEAVE_ROOM =2;

	}

	message PhoneNumber{
		required string number = 1;
		optional PhoneType type = 2 [default = HOME];
	}

	message JoinRoom {
		required 
	}

	repeated PhoneNumber phones = 4;
}

message AddressBook{
	repeated Person people = 1;
}